--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Média Anual</title>
+    <title>Calculadora de Média Final Escolar</title>
     <link rel="stylesheet" href="styles.css">
     </head>
 <body>
@@ -118,4 +118,5 @@ const firebaseConfig = {
 
 
     <script src="calculos.js"></script>
+
 </html>
